--- a/style.css
+++ b/style.css
@@ -371,3 +371,23 @@ body {
 .bkg {
     background-color: #ffa2b9;
 }
+
+.custom-file-label {
+    width: 100%;
+    height: 100%;
+    padding: 0 10px;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    background-color: #EEEDEF;
+    color: #A9A8A9;
+    cursor: pointer;
+}
+
+#form_input .type input[type="file"] {
+    width: auto;
+    padding: 0;
+    opacity: 1;
+    cursor: pointer;
+    display: none;
+}
