--- a/public/style.css
+++ b/public/style.css
@@ -368,6 +368,32 @@ body {
     font-weight: 500;
 }
 
+#form_signup .type {
+    width: 330px;
+    height: 48px;
+    background-color: #EEEDEF;
+    margin: 30px 0;
+}
+
+#form_signup .type input {
+    width: 100%;
+    height: 100%;
+    padding: 0 10px;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    background-color: transparent;
+}
+
+#form_signup .type input::placeholder {
+    color: #A9A8A9;
+}
+
+#form_signup .forgot {
+    margin-bottom: 20px;
+    font-weight: 500;
+}
+
 .bkg {
     background-color: #ffa2b9;
 }
@@ -385,6 +411,14 @@ body {
 }
 
 #form_input .type input[type="file"] {
+    width: auto;
+    padding: 0;
+    opacity: 1;
+    cursor: pointer;
+    display: none;
+}
+
+#form_signup .type input[type="file"] {
     width: auto;
     padding: 0;
     opacity: 1;
