--- a/public/style.css
+++ b/public/style.css
@@ -141,14 +141,14 @@ body {
     color: #3a3838;
 }
 
-#form_input .type {
+#form_login .type {
     width: 330px;
     height: 48px;
     background-color: #EEEDEF;
     margin: 30px 0;
 }
 
-#form_input .type input {
+#form_login .type input {
     width: 100%;
     height: 100%;
     padding: 0 10px;
@@ -158,11 +158,11 @@ body {
     background-color: transparent;
 }
 
-#form_input .type input::placeholder {
+#form_login .type input::placeholder {
     color: #A9A8A9;
 }
 
-#form_input .forgot {
+#form_login .forgot {
     margin-bottom: 20px;
     font-weight: 500;
 }
@@ -342,14 +342,14 @@ body {
     color: #3a3838;
 }
 
-#form_input .type {
+#form_login .type {
     width: 330px;
     height: 48px;
     background-color: #EEEDEF;
     margin: 30px 0;
 }
 
-#form_input .type input {
+#form_login .type input {
     width: 100%;
     height: 100%;
     padding: 0 10px;
@@ -359,11 +359,11 @@ body {
     background-color: transparent;
 }
 
-#form_input .type input::placeholder {
+#form_login .type input::placeholder {
     color: #A9A8A9;
 }
 
-#form_input .forgot {
+#form_login .forgot {
     margin-bottom: 20px;
     font-weight: 500;
 }
@@ -410,7 +410,7 @@ body {
     cursor: pointer;
 }
 
-#form_input .type input[type="file"] {
+#form_login .type input[type="file"] {
     width: auto;
     padding: 0;
     opacity: 1;
