--- a/public/admin.css
+++ b/public/admin.css
@@ -143,3 +143,20 @@ input[type="number"] {
 .bkg {
     background-color: pink;
 }
+
+#loading-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: white;
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+body.hidden {
+    visibility: hidden;
+}
