--- a/public/user.css
+++ b/public/user.css
@@ -49,6 +49,7 @@ input[type="number"] {
 .feed-error-message {
     color: red;
     margin-top: 10px;
+    visibility: hidden;
 }
 
 #posts-container {
@@ -142,4 +143,8 @@ input[type="number"] {
 
 .bkg {
     background-color: pink;
+}
+
+body.hidden {
+    visibility: hidden;
 }
